[package]
name = "rustypatina"
version = "0.1.0"
edition = "2021"

license = "MIT OR Apache-2.0"
description = "Imaging tool. Provides basic image resize and blur program for common image formats. Based on the image library."
repository = "https://github.com/UweKrause/rustypatina"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
image = "0.25.1"
